# Saint-Booking

./: CMakeLists.txt  README.md
server/: CMakeLists.txt
server/include/: core.hpp  crypto.hpp  database.hpp  database_pool.hpp  envloader.hpp  httpserver.hpp  routes.hpp  structs.hpp  utils.hpp
server/sql/functions/: check_session_token.sql  select_discounted_hotels_search.sql  select_discounted_hotels_start.sql  select_hotel.sql  select_hotels_search.sql  select_hotels_start.sql  select_place.sql  select_places_search.sql  select_places_start.sql
server/src/: core.cpp  crypto.cpp  database.cpp  database_pool.cpp  envloader.cpp  httpserver.cpp  main.cpp  routes.cpp  utils.cpp
